# dancepredictor

./: .gitignore  Cargo.toml  Eientewi Set 12A.sm  LICENSE  README.md  basic.sm
src/: bin.rs  cost.rs  extensions.rs  feet.rs  graph.rs  lib.rs  stage.rs  state.rs
src/cost/: basic.rs  brackets.rs  footswitch_jacks.rs  mod.rs
src/graph/: mod.rs
src/graph/tests/: basic.rs  brackets.rs  footswitch_jacks.rs  mod.rs
