[package]
name = "dancepredictor"
description = "StepMania Step Generator"
keywords = ["stepmania", "itgmania", "ddr", "sm"]

version = "0.1.0"
edition = "2024"

license = "MIT"
repository = "https://codeberg.org/nobbele/dancepredictor"
homepage = "https://codeberg.org/nobbele/dancepredictor"

[lib]
name = "dancepredictor"
path = "src/lib.rs"

[[bin]]
name = "dancepredictor-bin"
path = "src/bin.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
danceparser = "0.2.0"
petgraph = "0.8.3"
ordered-float = "5.3.0"
approx = "0.5.1"
# smallvec = { version = "1.15.1", features = ["union"] }
rustc-hash = "2.1.2"

# Binary Dependencies
clap = { version = "4.6.1", optional = true }
